src/test/ui/feature-gates/feature-gate-yield-closures.rs
fn main() {
    let _ = || { yield }; //~ ERROR yield syntax is experimental
}
